--- a/books.html
+++ b/books.html
@@ -3,13 +3,13 @@ layout: default
 title: Books
 ---
 
-<section class="section books">
+<section class="section books" data-aos="fade-up">
   <header class="section__header">
-    <h1 class="section__title">Books I Have Read</h1>
+    <h1 class="section__title" data-aos="fade-up" data-aos-delay="50">Books I Have Read</h1>
   </header>
 
   <div class="books-grid">
-    <article class="book-card card">
+    <article class="book-card card" data-aos="fade-up" data-aos-delay="100">
       <div class="book-card__cover-wrapper">
         <div class="book-card__cover">
           <svg class="book-card__icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
@@ -30,7 +30,9 @@ title: Books
       </div>
     </article>
 
-    <article class="book-card card">
+    </article>
+
+    <article class="book-card card" data-aos="fade-up" data-aos-delay="150">
       <div class="book-card__cover-wrapper">
         <div class="book-card__cover">
           <svg class="book-card__icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
@@ -51,7 +53,9 @@ title: Books
       </div>
     </article>
 
-    <article class="book-card card">
+    </article>
+
+    <article class="book-card card" data-aos="fade-up" data-aos-delay="200">
       <div class="book-card__cover-wrapper">
         <div class="book-card__cover">
           <svg class="book-card__icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
@@ -72,7 +76,9 @@ title: Books
       </div>
     </article>
 
-    <article class="book-card card">
+    </article>
+
+    <article class="book-card card" data-aos="fade-up" data-aos-delay="250">
       <div class="book-card__cover-wrapper">
         <div class="book-card__cover">
           <svg class="book-card__icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
@@ -93,7 +99,9 @@ title: Books
       </div>
     </article>
 
-    <article class="book-card card">
+    </article>
+
+    <article class="book-card card" data-aos="fade-up" data-aos-delay="300">
       <div class="book-card__cover-wrapper">
         <div class="book-card__cover">
           <svg class="book-card__icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
@@ -114,7 +122,9 @@ title: Books
       </div>
     </article>
 
-    <article class="book-card card">
+    </article>
+
+    <article class="book-card card" data-aos="fade-up" data-aos-delay="350">
       <div class="book-card__cover-wrapper">
         <div class="book-card__cover">
           <svg class="book-card__icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
