--- a/projects.html
+++ b/projects.html
@@ -3,14 +3,14 @@ layout: default
 title: Projects
 ---
 
-<section class="section section--projects">
+<section class="section section--projects" data-aos="fade-up">
   <header class="section__header">
-    <h1 class="section__title">Projects</h1>
+    <h1 class="section__title" data-aos="fade-up" data-aos-delay="50">Projects</h1>
   </header>
 
   <div class="projects">
     <div class="projects__grid">
-      <article class="project-card card">
+      <article class="project-card card" data-aos="fade-up" data-aos-delay="100">
         <div class="project-card__media">
           <img
             class="project-card__image"
@@ -26,7 +26,7 @@ title: Projects
         </div>
       </article>
 
-      <article class="project-card card">
+      <article class="project-card card" data-aos="fade-up" data-aos-delay="200">
         <div class="project-card__media">
           <img
             class="project-card__image"
