--- a/resume.html
+++ b/resume.html
@@ -3,9 +3,9 @@ layout: default
 title: Resume
 ---
 
-<section class="section resume">
+<section class="section resume" data-aos="fade-up">
   <header class="section__header resume__header">
-    <div class="resume__heading">
+    <div class="resume__heading" data-aos="fade-up" data-aos-delay="50">
       <h1 class="section__title">Resume</h1>
       <p class="section__subtitle">
         Mathematics student at ADA University with strong leadership and volunteering experience. Directed large scale events, coordinated diverse teams, and promoted social impact initiatives. Skilled in communication, organization, and art direction, with a passion for community development, cultural exchange, and creative problem solving. Dedicated to driving positive change through active engagement.
@@ -15,19 +15,21 @@ title: Resume
       class="resume__download"
       href="{{ '/assets/documents/huseyn-cv.pdf' | relative_url }}"
       download
+      data-aos="fade-in"
+      data-aos-delay="100"
       >Download CV (PDF)</a
     >
   </header>
 
   <div class="resume__grid">
-    <section class="resume__section card resume__section--about">
+    <section class="resume__section card resume__section--about" data-aos="fade-up" data-aos-delay="100">
       <h2 class="resume__title">About Me</h2>
       <p class="resume__text">
         Mathematics student at ADA University with strong leadership and volunteering experience. Directed large scale events, coordinated diverse teams, and promoted social impact initiatives. Skilled in communication, organization, and art direction, with a passion for community development, cultural exchange, and creative problem solving. Dedicated to driving positive change through active engagement.
       </p>
     </section>
 
-    <section class="resume__section card">
+    <section class="resume__section card" data-aos="fade-up" data-aos-delay="150">
       <h2 class="resume__title">Education</h2>
       <div class="resume__item">
         <div class="resume__item-top">
@@ -52,10 +54,10 @@ title: Resume
       </div>
     </section>
 
-    <section class="resume__section card">
+    <section class="resume__section card" data-aos="fade-up" data-aos-delay="200">
       <h2 class="resume__title">Work Experience</h2>
       <div class="resume__entries">
-        <article class="resume__entry">
+        <article class="resume__entry" data-aos="fade-up" data-aos-delay="200">
           <div class="resume__entry-header">
             <div>
               <h3 class="resume__entry-title">Coordinator of the Volunteers</h3>
@@ -71,7 +73,9 @@ title: Resume
           </ul>
         </article>
 
-        <article class="resume__entry">
+        </article>
+
+        <article class="resume__entry" data-aos="fade-up" data-aos-delay="250">
           <div class="resume__entry-header">
             <div>
               <h3 class="resume__entry-title">HR Manager</h3>
@@ -87,7 +91,9 @@ title: Resume
           </ul>
         </article>
 
-        <article class="resume__entry">
+        </article>
+
+        <article class="resume__entry" data-aos="fade-up" data-aos-delay="300">
           <div class="resume__entry-header">
             <div>
               <h3 class="resume__entry-title">Human Resources Intern</h3>
@@ -104,7 +110,9 @@ title: Resume
           </ul>
         </article>
 
-        <article class="resume__entry">
+        </article>
+
+        <article class="resume__entry" data-aos="fade-up" data-aos-delay="350">
           <div class="resume__entry-header">
             <div>
               <h3 class="resume__entry-title">Volunteer Assistant of Director & Organizer Volunteer</h3>
@@ -121,10 +129,10 @@ title: Resume
       </div>
     </section>
 
-    <section class="resume__section card">
+    <section class="resume__section card" data-aos="fade-up" data-aos-delay="250">
       <h2 class="resume__title">Volunteering</h2>
       <div class="resume__entries">
-        <article class="resume__entry">
+        <article class="resume__entry" data-aos="fade-up" data-aos-delay="250">
           <div class="resume__entry-header">
             <div>
               <h3 class="resume__entry-title">Art Teacher Assistant</h3>
@@ -140,7 +148,9 @@ title: Resume
           </ul>
         </article>
 
-        <article class="resume__entry">
+        </article>
+
+        <article class="resume__entry" data-aos="fade-up" data-aos-delay="300">
           <div class="resume__entry-header">
             <div>
               <h3 class="resume__entry-title">Art Director</h3>
@@ -156,7 +166,9 @@ title: Resume
           </ul>
         </article>
 
-        <article class="resume__entry">
+        </article>
+
+        <article class="resume__entry" data-aos="fade-up" data-aos-delay="350">
           <div class="resume__entry-header">
             <div>
               <h3 class="resume__entry-title">Visitor Services Volunteer</h3>
@@ -171,7 +183,9 @@ title: Resume
           </ul>
         </article>
 
-        <article class="resume__entry">
+        </article>
+
+        <article class="resume__entry" data-aos="fade-up" data-aos-delay="400">
           <div class="resume__entry-header">
             <div>
               <h3 class="resume__entry-title">Regional Development Public Union</h3>
@@ -189,10 +203,10 @@ title: Resume
       </div>
     </section>
 
-    <section class="resume__section card">
+    <section class="resume__section card" data-aos="fade-up" data-aos-delay="300">
       <h2 class="resume__title">Skills</h2>
       <div class="resume__skills-grid">
-        <div class="resume__skill-group">
+        <div class="resume__skill-group" data-aos="fade-up" data-aos-delay="300">
           <h3 class="resume__skill-title">Technical Skills</h3>
           <ul class="resume__skills-list">
             <li>Microsoft Office</li>
@@ -202,7 +216,7 @@ title: Resume
             <li>Google Drive</li>
           </ul>
         </div>
-        <div class="resume__skill-group">
+        <div class="resume__skill-group" data-aos="fade-up" data-aos-delay="350">
           <h3 class="resume__skill-title">Artistic Skills</h3>
           <ul class="resume__skills-list">
             <li>Professional Artistic Painting</li>
@@ -219,7 +233,7 @@ title: Resume
             <li>Strengthened communication, mentoring, and leadership skills through active involvement in teaching activities.</li>
           </ul>
         </div>
-        <div class="resume__skill-group">
+        <div class="resume__skill-group" data-aos="fade-up" data-aos-delay="400">
           <h3 class="resume__skill-title">Leadership & Soft Skills</h3>
           <ul class="resume__skills-list">
             <li>leadership</li>
@@ -234,7 +248,7 @@ title: Resume
             <li>Team Leadership</li>
           </ul>
         </div>
-        <div class="resume__skill-group">
+        <div class="resume__skill-group" data-aos="fade-up" data-aos-delay="450">
           <h3 class="resume__skill-title">Organizational Skills</h3>
           <ul class="resume__skills-list">
             <li>understand spoken English</li>
@@ -253,7 +267,7 @@ title: Resume
       </div>
     </section>
 
-    <section class="resume__section card">
+    <section class="resume__section card" data-aos="fade-up" data-aos-delay="350">
       <h2 class="resume__title">Languages</h2>
       <ul class="resume__languages">
         <li><span class="resume__language">Azerbaijani</span> - Native</li>
@@ -263,10 +277,10 @@ title: Resume
       </ul>
     </section>
 
-    <section class="resume__section card">
+    <section class="resume__section card" data-aos="fade-up" data-aos-delay="400">
       <h2 class="resume__title">Certifications</h2>
       <div class="resume__cert-grid">
-        <article class="resume__cert-card">
+        <article class="resume__cert-card" data-aos="fade-up" data-aos-delay="400">
           <div class="resume__entry-header">
             <div>
               <h3 class="resume__entry-title">Stepping Up: Preparing Yourself for Leadership</h3>
@@ -277,7 +291,7 @@ title: Resume
           <a class="resume__link" href="https://www.coursera.org/account/accomplishments/verify/2HD6RMCNPWW7" target="_blank" rel="noopener">Link</a>
         </article>
 
-        <article class="resume__cert-card">
+        <article class="resume__cert-card" data-aos="fade-up" data-aos-delay="430">
           <div class="resume__entry-header">
             <div>
               <h3 class="resume__entry-title">Foundations of Project Management</h3>
@@ -288,7 +302,7 @@ title: Resume
           <a class="resume__link" href="https://www.coursera.org/account/accomplishments/verify/OCH71PIYXX4K" target="_blank" rel="noopener">Link</a>
         </article>
 
-        <article class="resume__cert-card">
+        <article class="resume__cert-card" data-aos="fade-up" data-aos-delay="460">
           <div class="resume__entry-header">
             <div>
               <h3 class="resume__entry-title">Effective Leadership: Master Management Styles</h3>
@@ -299,7 +313,7 @@ title: Resume
           <a class="resume__link" href="https://www.coursera.org/account/accomplishments/verify/OWQMMXV4JC1R" target="_blank" rel="noopener">Link</a>
         </article>
 
-        <article class="resume__cert-card">
+        <article class="resume__cert-card" data-aos="fade-up" data-aos-delay="490">
           <div class="resume__entry-header">
             <div>
               <h3 class="resume__entry-title">Agile Leadership: Introduction to Change</h3>
@@ -310,7 +324,7 @@ title: Resume
           <a class="resume__link" href="https://www.coursera.org/account/accomplishments/verify/2H0EWE3SSXFP" target="_blank" rel="noopener">Link</a>
         </article>
 
-        <article class="resume__cert-card">
+        <article class="resume__cert-card" data-aos="fade-up" data-aos-delay="520">
           <div class="resume__entry-header">
             <div>
               <h3 class="resume__entry-title">Developing Innovative Ideas for New Companies: The First Step in Entrepreneurship</h3>
@@ -321,7 +335,7 @@ title: Resume
           <a class="resume__link" href="https://www.coursera.org/account/accomplishments/verify/R68FEA61T60O" target="_blank" rel="noopener">Link</a>
         </article>
 
-        <article class="resume__cert-card">
+        <article class="resume__cert-card" data-aos="fade-up" data-aos-delay="550">
           <div class="resume__entry-header">
             <div>
               <h3 class="resume__entry-title">Introduction to Generative AI</h3>
@@ -332,7 +346,7 @@ title: Resume
           <a class="resume__link" href="https://www.coursera.org/account/accomplishments/verify/W32U6HDPMZV9" target="_blank" rel="noopener">Link</a>
         </article>
 
-        <article class="resume__cert-card">
+        <article class="resume__cert-card" data-aos="fade-up" data-aos-delay="580">
           <div class="resume__entry-header">
             <div>
               <h3 class="resume__entry-title">Developing An Entrepreneurial Mindset: First Step Towards Success</h3>
@@ -343,7 +357,7 @@ title: Resume
           <a class="resume__link" href="https://www.coursera.org/account/accomplishments/verify/W3VUE6DN2ERU" target="_blank" rel="noopener">Link</a>
         </article>
 
-        <article class="resume__cert-card">
+        <article class="resume__cert-card" data-aos="fade-up" data-aos-delay="610">
           <div class="resume__entry-header">
             <div>
               <h3 class="resume__entry-title">Introduction to Responsible AI</h3>
@@ -356,7 +370,7 @@ title: Resume
       </div>
     </section>
 
-    <section class="resume__section card">
+    <section class="resume__section card" data-aos="fade-up" data-aos-delay="450">
       <h2 class="resume__title">Hobbies & Interests</h2>
       <ul class="resume__tags">
         <li>Reading</li>
