--- a/about.html
+++ b/about.html
@@ -3,13 +3,13 @@ layout: default
 title: About Me
 ---
 
-<section class="section">
+<section class="section" data-aos="fade-up">
   <header class="section__header">
-    <h1 class="section__title">About Me</h1>
+    <h1 class="section__title" data-aos="fade-up" data-aos-delay="50">About Me</h1>
   </header>
 
   <div class="about">
-    <div class="about__intro">
+    <div class="about__intro" data-aos="fade-in" data-aos-delay="100">
       <p>
         I am Huseyn Huseynzada, a Mathematics student at ADA University in Baku, Azerbaijan. I am interested in the connection between mathematics, creativity, and modern technology. I like understanding how mathematical ideas work in real life and how creative thinking can make those ideas more meaningful.
       </p>
@@ -22,21 +22,21 @@ title: About Me
     </div>
 
     <div class="about__grid">
-      <div class="card">
+      <div class="card" data-aos="fade-up" data-aos-delay="100">
         <h2 class="card__title">What I Study</h2>
         <p class="card__content">
           Mathematics at ADA University, focusing on the connection between mathematics, creativity, and modern technology. I explore how mathematical ideas work in real life and how creative thinking makes them more meaningful.
         </p>
       </div>
 
-      <div class="card">
+      <div class="card" data-aos="fade-up" data-aos-delay="200">
         <h2 class="card__title">What I Love</h2>
         <p class="card__content">
           Reading, drawing, volunteering, leadership, and organizing events. These activities help me grow as a communicator and team member while keeping me connected to my artistic side.
         </p>
       </div>
 
-      <div class="card">
+      <div class="card" data-aos="fade-up" data-aos-delay="300">
         <h2 class="card__title">How I Work</h2>
         <p class="card__content">
           Through learning new things, solving problems, and helping others learn. I use creative thinking and mathematical reasoning to build ideas that are both useful and inspiring, recognizing that people's creative ability is what makes innovation possible.
