--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@ layout: default
 title: Home
 ---
 
-<section class="section">
+<section class="section" data-aos="fade-up">
   <div class="hero">
-    <div class="hero__image-wrapper">
+    <div class="hero__image-wrapper" data-aos="fade-in" data-aos-delay="100">
       <img src="{{ '/assets/images/profile.jpg' | relative_url }}" alt="Huseyn Huseynzada" class="hero__image">
     </div>
-    <div class="hero__text">
+    <div class="hero__text" data-aos="fade-up" data-aos-delay="150">
       <h1 class="hero__title">Welcome.</h1>
       <p class="hero__name">I am <strong>Huseyn Huseynzada</strong>, a Mathematics student at ADA University.</p>
       <div class="hero__content">
@@ -26,17 +26,17 @@ title: Home
   </div>
 </section>
 
-<section class="section">
+<section class="section" data-aos="fade-up" data-aos-delay="100">
   <div class="hero__links">
-    <a href="{{ '/about.html' | relative_url }}" class="card">
+    <a href="{{ '/about.html' | relative_url }}" class="card" data-aos="fade-up" data-aos-delay="100">
       <h2 class="card__title">About Me</h2>
       <p class="card__content">Learn more about my journey, interests, and goals.</p>
     </a>
-    <a href="{{ '/art.html' | relative_url }}" class="card">
+    <a href="{{ '/art.html' | relative_url }}" class="card" data-aos="fade-up" data-aos-delay="200">
       <h2 class="card__title">My Art</h2>
       <p class="card__content">Explore my creative work and visual expressions.</p>
     </a>
-    <a href="{{ '/books.html' | relative_url }}" class="card">
+    <a href="{{ '/books.html' | relative_url }}" class="card" data-aos="fade-up" data-aos-delay="300">
       <h2 class="card__title">My Books</h2>
       <p class="card__content">Discover the books that inspire my thinking.</p>
     </a>
