logic gates added

--- a/projects.html
+++ b/projects.html
@@ -75,6 +75,57 @@ title: Projects
           </div>
         </div>
       </article>
+
+      <article class="project-card card" data-aos="fade-up" data-aos-delay="400">
+        <div class="project-card__body">
+          <h2 class="project-card__title">How Hardware Works: Logic Gates from Scratch</h2>
+          <p class="project-card__description">
+            A hands-on hardware project showing how NOT, AND, and OR gates can be built from scratch to reveal how logic is implemented physically.
+          </p>
+          <a
+            class="project-card__toggle"
+            href="https://youtu.be/YocZhnFFCuc?si=YbtWZzcHczsIwxpg"
+            target="_blank"
+            rel="noopener"
+          >
+            Watch Video
+          </a>
+        </div>
+      </article>
+
+      <article class="project-card card" data-aos="fade-up" data-aos-delay="500">
+        <div class="project-card__body">
+          <h2 class="project-card__title">NAND Gate Construction</h2>
+          <p class="project-card__description">
+            Building a NAND gate from basic components to demonstrate its universality and how complex logic emerges from simple hardware blocks.
+          </p>
+          <a
+            class="project-card__toggle"
+            href="https://youtu.be/SdyG92k8mvU?feature=shared"
+            target="_blank"
+            rel="noopener"
+          >
+            Watch Video
+          </a>
+        </div>
+      </article>
+
+      <article class="project-card card" data-aos="fade-up" data-aos-delay="600">
+        <div class="project-card__body">
+          <h2 class="project-card__title">XOR Gate Construction</h2>
+          <p class="project-card__description">
+            A step-by-step build of an XOR gate explaining how exclusive-or behavior is realized in hardware for arithmetic and error detection.
+          </p>
+          <a
+            class="project-card__toggle"
+            href="https://youtu.be/2YK-_RXiyuU?si=JYfXouQgV-3Osrew"
+            target="_blank"
+            rel="noopener"
+          >
+            Watch Video
+          </a>
+        </div>
+      </article>
     </div>
   </div>
 </section>
